# fontfreeze

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE.md  Pipfile  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  eslint.config.js  eslint.config.mjs  gulpfile.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  rsbuild.config.ts  tsconfig.json
.github/: FUNDING.yml
docs/: bb442eaf0f0184d9.py  index.html  main.js  main.py  sample.md  style.css  worker.js
docs/static/assets/: main.09a273bf.py  main.09bdcc0e.py  main.43b99f67.py  main.83bc476e.py  main.fdc509b1.py
docs/static/css/: 191.238719e0.css  414.0256ad36.css  49.687c30b9.css  630.073ab614fa.css  68.98f1da91.css  index.27c375bc.css  index.3d9eceff.css  index.4bb06620.css  index.6e1f35c3.css  index.73be2f3c91.css  index.810f159f.css  index.885deafe.css  index.8e5f2067.css  index.90fcb638.css  index.9581602c.css  index.9a6a0cc9.css  index.a42db387.css  index.a4c884ca.css  index.ca613df2.css  index.cc970fe6.css  index.d6ba31be.css  index.dc656848.css  index.f33d037d.css  index.f774ae26.css
patches/: petite-vue.patch
src/: index.html  main.js  main.py  style.css  worker.js
src/app/: bridge.ts  constants.ts  generate.ts  global.d.ts  i18n.ts  index.js  index.ts  loader.ts  localFonts.ts  plainText.ts  preview.ts  sample.txt  shim.d.ts  store.ts  style.scss  tsconfig.json  unicode.ts  utils.ts  worker.js  worker.ts
src/locale/: en.json  ko.json  zh-CN.json  zh-TW.json
src/public/: index.html  sample.txt
src/python/: main.py
(+99 files in other folders)
